# dace-rs

./: .gitignore  .gitmodules  Cargo.toml  NOTICE  README.md  build.rs
.github/workflows/: rust.yml
dacecore/: CMakeLists.txt
examples/: example_0_01.rs  example_1_01.rs  example_1_02.rs  example_1_03.rs  example_1_04.rs  example_1_05.rs  example_1_06.rs  example_1_07.rs  example_1_08.rs  example_1_09.rs  example_1_10.rs  example_1_11_1_da.rs  example_1_11_2_da_rk78.rs  example_1_11_3_pointwise.rs  example_1_12.rs  example_2_01_basics.rs  example_2_02_int_diff.rs  example_2_03_evaluation.rs  example_2_04_solver.rs  example_2_05_vectors.rs  example_2_06_integrator.rs  example_2_07_pid.rs
src/: da.rs  dacecore.rs  exception.rs  interval.rs  lib.rs  mat.rs  vec.rs
