[package]
name = "dace"
version = "0.2.0"
authors = ["Giovanni Purpura"]
edition = "2021"
description = "Rust wrapper of DACE, the Differential Algebra Computational Toolbox."
readme = "README.md"
repository = "https://github.com/giovannipurpura/dace-rs/"
license = "Apache-2.0"
keywords = ["differential-algebra"]
categories = ["mathematics", "science", "api-bindings"]
exclude = [
    ".github/workflows/rust.yml",
    ".gitignore",
    ".gitmodules",
    "examples/*.pdf",
    "dacecore/dacelib/.github/",
    "dacecore/dacelib/.travis.yml",
    "dacecore/dacelib/README-LINUX",
    "dacecore/dacelib/README-MAC.rtf",
    "dacecore/dacelib/README.md",
    "dacecore/dacelib/ArchLinux/",
    "dacecore/dacelib/CMakeLists.txt",
    "dacecore/dacelib/Doxyfile",
    "dacecore/dacelib/Tutorials/",
    "dacecore/dacelib/interfaces/",
    "dacecore/dacelib/deploy.sh",
    "dacecore/dacelib/core/CMakeLists.txt",
    "dacecore/dacelib/core/contrib/CMakeLists.txt",
    "dacecore/dacelib/core/contrib/netlib/change.py",
    "*.f"]

[dependencies]
impl_ops = "0.1"
paste = "1.0"
num-traits = "0.2"
ndarray = "0.15"
ndarray-linalg = "0.16"

[build-dependencies]
cmake = "0.1"
